- `preserve-tombs`: properly re-enable after loading a game that had the tool enabled
- `zone`: assign animal to cage/restraint dialog now allows you to unassign a pet from the cage or restraint if the pet is already somehow assigned (e.g.  war dog was in cage and was subsequently assigned to a dwarf)

## Misc Improvements
- `strangemood`: add ability to choose Stone Cutting and Stone Carving as the mood skill
- `suspendmanager`: add more specific messages for submerged jobsites and those managed by `buildingplan`

## Documentation
- Added example code for creating plugin RPC endpoints that can be used to extend the DFHack API

## API
- ``Units::isUnitInBox``, ``Units::getUnitsInBox``: add versions accepting pos arguments
- ``Units::getVisibleName``: when acting on a unit without an impersonated identity, returns the unit's name structure instead of the associated histfig's name structure

## Lua
- ``dfhack.units.isUnitInBox``, ``dfhack.units.getUnitsInBox``: add versions accepting pos arguments
- ``widgets.FilteredList``: search keys for list items can now be functions that return a string

## Removed

## Internals
- Plugin command callbacks are now called with the core suspended by default so DF memory is always safe to access
- Errors when unloading a plugin's DLL are now checked and reported

# 50.15-r1.2

## Misc Improvements

- Updated support for Itch

# 50.15-r1.1

## Misc Improvements

- Updated support for Classic (Itch not available for analysis yet)

# 50.15-r1

## Fixes

- `gui/prerelease-warning`: don't pop up during worldgen, only after a fort has been loaded

# 50.14-r2

## New Tools
- `infinite-sky`: (reinstated, renamed from ``infiniteSky``) automatically create new z-levels of sky to build in
- `forceequip`: (reinstated) forcibly move items into a unit's inventory

## New Features