@@ -61,6 +61,7 @@ Template for new versions:
 - `preserve-rooms`: handle case where unit records are culled by DF immediately after a unit leaves the map
 - `preserve-tombs`: properly re-enable after loading a game that had the tool enabled
 - `zone`: assign animal to cage/restraint dialog now allows you to unassign a pet from the cage or restraint if the pet is already somehow assigned (e.g.  war dog was in cage and was subsequently assigned to a dwarf)
+- `stockpiles`: don't set ``use_links_only`` flag to a random value when the flag is not set to anything in the settings that are being imported
 
 ## Misc Improvements
 - `strangemood`: add ability to choose Stone Cutting and Stone Carving as the mood skill
